# lambda-rust-http

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  setup.sh
.github/workflows/: deploy.yml
infra/: main.tf  outputs.tf
src/: main.rs
