[package]
name = "lambda-rust-http"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.16"
lambda_runtime = "0.14"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
cargo-lambda = "1.8.6"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
